targets/srv0/k3s/navidrome/navidrome.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:0.63.2
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 4533
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /ping
              port: 4533
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: navidrome-data
              mountPath: /data
            - name: navidrome-music
              mountPath: /music
              readOnly: true
      volumes:
        - name: navidrome-data
          persistentVolumeClaim:
            claimName: navidrome-data-pvc
        - name: navidrome-music
          persistentVolumeClaim:
            claimName: navidrome-music-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: navidrome
  ports:
    - port: 4533
      targetPort: 4533
